# easyTicTacToe

./: .gitignore  .gitmodules  CMakeLists.txt  NNServer.cpp  NeuralNetworkServer.cpp  client.cpp  common.h  compile.sh  credentials.json  dataHandler.cpp  dataHandler.h  game.h  main  main.cpp  mainServer.cpp  neuralNetwork.cpp  neuralNetwork.h  readme.md  tcp_handler.cpp  train_data.csv  train_labels.csv  udp.cpp  udp.h
_server_trainer/: _main.cpp  clientState.hpp  main.cpp  serverState.hpp  trainerClient.cpp  trainerClient.hpp  trainerServer.cpp  trainerServer.hpp
admin/: CMakeLists.txt  admin.cpp  admin.hpp  main.cpp
data/: data.txt  generateData.cpp  main
neural_network/: CMakeLists.txt  dataHandler.cpp  dataHandler.hpp  neuralNetwork.cpp  neuralNetwork.hpp
player/: CMakeLists.txt  main.cpp  player.cpp  player.hpp
server_main/: CMakeLists.txt  admin.cpp  admin.hpp  config.cpp  config.hpp  logger.cpp  logger.hpp  main.cpp  manager.cpp  manager.hpp  player.cpp  player.hpp  server.cpp  server.hpp  socket.cpp  socket.hpp  trainer.cpp  trainer.hpp  utils._hpp
server_trainer/: CMakeLists.txt  client.cpp  client.hpp  clientState.hpp  main.cpp  manager.cpp  manager.hpp  processor.hpp  server.cpp  server.hpp  serverState.hpp  state.hpp  trainer.cpp  trainer.hpp  trainerClient.cpp  trainerClient.hpp  trainerServer.cpp
shared/: CMakeLists.txt  CmakeLists.txt  client.hpp  database.cpp  database.hpp  logger.hpp  socket.cpp  socket.hpp  utils.cpp  utils.hpp
udp/: CMakeLists.txt  udp.cpp  udp.hpp
